<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_login"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/phone_number_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_celular"
        android:inputType="phone"
        android:maxLines="1"/>

    <Button
        android:id="@+id/send_otp_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_otp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/verification_code_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_otp"
        android:inputType="number"
        android:maxLines="1"
        android:enabled="false"/>

    <Button
        android:id="@+id/verify_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_otp"
        android:layout_marginTop="16dp"
        android:enabled="false"/>

</LinearLayout>